flux/infrastructure/networking/cilium-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: kube-system
  annotations:
    io.cilium/lb-ipam-ips: "192.168.12.100"
spec:
  gatewayClassName: cilium
  listeners:
  - name: http-gateway
    hostname: "*.local.dev"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https-gateway
    hostname: "*.local.dev"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: gateway-api-tls
    allowedRoutes:
      namespaces:
        from: All
