flux/infrastructure/networking/hubble-ui.yaml
---
# HTTPRoute for Hubble UI access
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
  labels:
      vlan: ingress
spec:
  parentRefs:
  - name: vlan12-gateway
    namespace: default
  hostnames:
  - "hubble.ingress.logikdev.fr"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hubble-ui
      port: 80
      weight: 100
